- Added launcher icons.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,12 @@ android {
     defaultConfig {
         applicationId "nanorstudios.ie.mathpractice"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [fabricKey: getFabricKey()]
     }
     buildTypes {
         release {
