--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="nanorstudios.ie.mathpractice"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MathPracticeApplication"
         android:allowBackup="true"
@@ -16,6 +18,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
@@ -25,8 +28,6 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="b7e69f91d6c0d163f0615717e90bdc789b6c44f4" />
+            android:value="${fabricKey}" />
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
